--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: salmon;
+  background-color: turquoise;
   color: snow;
   font-size: 25px;
 }
@@ -8,18 +8,22 @@ body {
   color: blue;
   text-align: center;
   margin: 10px auto;
-  background-color: blueviolet;
+  background-color: white;
   padding: 10px 20px;
   width: 50vw;
 }
 
-.white,
-.no {
+.post1,
+.post2,
+.post3 {
   color: white;
   font-size: 40px;
   margin: 20px auto;
-  background-color: brown;
+  background-color: red;
   padding: 5px;
+  width: 200px;
+  height: 300px;
+  text-align: center;
 }
 
 h6 {
