--- a/style.css
+++ b/style.css
@@ -15,14 +15,22 @@ body {
 }
 
 .post1,
-.post2,
 .post3 {
   font-size: 40px;
   margin: 20px auto;
-  background-color: white;
   padding: 5px;
   width: 500px;
   height: 400px;
+  text-align: center;
+  border-radius: 20px;
+}
+
+.post2 {
+  font-size: 40px;
+  margin: 20px auto;
+  padding: 5px;
+  width: 500px;
+  height: 370px;
   text-align: center;
   border-radius: 20px;
 }
@@ -33,6 +41,7 @@ body {
   background-size: contain;
   background-position: center;
   background-position-y: -15px;
+  background-color: white;
 }
 
 .post2 {
@@ -41,6 +50,7 @@ body {
   background-size: contain;
   background-position: center;
   background-position-y: 0px;
+  background-color: #f8f4f4;
 }
 
 .post3 {
@@ -49,6 +59,7 @@ body {
   background-size: 350px;
   background-position: center;
   background-position-y: 60px;
+  background-color: white;
 }
 
 .skittles,
@@ -90,6 +101,14 @@ body {
 }
 
 .link1 {
-  background-color: black;
-  background-size: 20vw;
+  font-size: 30px;
+}
+
+.link2 {
+  font-size: 30px;
+  margin-top: 100px;
+}
+
+.link3 {
+  font-size: 30px;
 }
